# referral-pdf-parser

./: .gitignore  main.py  pyproject.toml
driver/: main.py
medical_pdf_parser/: __init__.py  config.py  fields.py  logger.py  ocr.py  parser.py  text_extractors.py
